trunk/src/Grammar.java
/* Generated By:JavaCC: Do not edit this line. Grammar.java */
    public class Grammar implements GrammarConstants {
        public static void main (String args[]) throws ParseException {
            Grammar parser = new Grammar(System.in);
            System.out.println("Reading from standard input...");
            try {
                parser.Program();
                System.out.println("OK.");
            } catch (Exception e) {
                System.out.println("NOK.");
                System.out.println(e.getMessage());
            }
        }

  final public void Program() throws ParseException {
    MainClass();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      ClassDecl();
    }
    jj_consume_token(0);
  }

  final public void MainClass() throws ParseException {
    jj_consume_token(T_CLASS);
    jj_consume_token(T_ID);
    jj_consume_token(T_LCHAVE);
    jj_consume_token(T_PUBLIC);
    jj_consume_token(T_STATIC);
    jj_consume_token(T_VOID);
    jj_consume_token(T_MAIN);
    jj_consume_token(T_LPAR);
    jj_consume_token(T_STRING);
    jj_consume_token(T_LCOL);
    jj_consume_token(T_RCOL);
    jj_consume_token(T_ID);
    jj_consume_token(T_RPAR);
    jj_consume_token(T_LCHAVE);
    Statement();
    jj_consume_token(T_RCHAVE);
    jj_consume_token(T_RCHAVE);
  }

  final public void ClassDecl() throws ParseException {
    if (jj_2_6(2)) {
      jj_consume_token(T_CLASS);
      jj_consume_token(T_ID);
      jj_consume_token(T_LCHAVE);
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
        VarDecl();
      }
      label_3:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_3;
        }
        MethodDecl();
      }
      jj_consume_token(T_RCHAVE);
    } else if (jj_2_7(2)) {
      jj_consume_token(T_CLASS);
      jj_consume_token(T_ID);
      jj_consume_token(T_EXTENDS);
      jj_consume_token(T_ID);
      jj_consume_token(T_LCHAVE);
      label_4:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_4;
        }
        VarDecl();
      }
      label_5:
      while (true) {
        if (jj_2_5(2)) {
          ;
        } else {
          break label_5;
        }
        MethodDecl();
      }
      jj_consume_token(T_RCHAVE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(T_ID);
    jj_consume_token(T_PVIRGULA);
  }

  final public void MethodDecl() throws ParseException {
    jj_consume_token(T_PUBLIC);
    Type();
    jj_consume_token(T_ID);
    jj_consume_token(T_LPAR);
    FormalList();
    jj_consume_token(T_RPAR);
    jj_consume_token(T_LCHAVE);
    label_6:
    while (true) {
      if (jj_2_8(2)) {
        ;
      } else {
        break label_6;
      }
      VarDecl();
    }
    label_7:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_7;
      }
      Statement();
    }
    jj_consume_token(T_RETURN);
    Exp();
    jj_consume_token(T_PVIRGULA);
    jj_consume_token(T_RCHAVE);
  }

  final public void FormalList() throws ParseException {
    if (jj_2_11(2)) {
      Type();
      jj_consume_token(T_ID);
      label_8:
      while (true) {
        if (jj_2_10(2)) {
          ;
        } else {
          break label_8;
        }
        FormalRest();
      }
    } else {
      ;
    }
  }

  final public void FormalRest() throws ParseException {
    jj_consume_token(T_VIRGULA);
    Type();
    jj_consume_token(T_ID);
  }

  final public void Type() throws ParseException {
    if (jj_2_12(2)) {
      jj_consume_token(T_INT);
      jj_consume_token(T_LCOL);
      jj_consume_token(T_RCOL);
    } else if (jj_2_13(2)) {
      jj_consume_token(T_BOOLEAN);
    } else if (jj_2_14(2)) {
      jj_consume_token(T_INT);
    } else if (jj_2_15(2)) {
      jj_consume_token(T_ID);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Statement() throws ParseException {
    if (jj_2_17(2)) {
      jj_consume_token(T_LCHAVE);
      label_9:
      while (true) {
        if (jj_2_16(2)) {
          ;
        } else {
          break label_9;
        }
        Statement();
      }
      jj_consume_token(T_RCHAVE);
    } else if (jj_2_18(2)) {
      jj_consume_token(T_IF);
      jj_consume_token(T_LPAR);
      Exp();
      jj_consume_token(T_RPAR);
      Statement();
      jj_consume_token(T_ELSE);
      Statement();
    } else if (jj_2_19(2)) {
      jj_consume_token(T_WHILE);
      jj_consume_token(T_LPAR);
      Exp();
      jj_consume_token(T_RPAR);
      Statement();
    } else if (jj_2_20(2)) {
      jj_consume_token(T_SYSTEM);
      jj_consume_token(T_DOT);
      jj_consume_token(T_OUT);
      jj_consume_token(T_DOT);
      jj_consume_token(T_PRINTLN);
      jj_consume_token(T_LPAR);
      Exp();
      jj_consume_token(T_RPAR);
      jj_consume_token(T_PVIRGULA);
    } else if (jj_2_21(2)) {
      jj_consume_token(T_ID);
      jj_consume_token(T_ASSIGN);
      Exp();
      jj_consume_token(T_PVIRGULA);
    } else if (jj_2_22(2)) {
      jj_consume_token(T_ID);
      jj_consume_token(T_LCOL);
      Exp();
      jj_consume_token(T_RCOL);
      jj_consume_token(T_ASSIGN);
      Exp();
      jj_consume_token(T_PVIRGULA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Exp() throws ParseException {
    ExpL();
    ExpR();
  }

  final public void ExpL() throws ParseException {
    if (jj_2_23(2)) {
      jj_consume_token(T_INTEGER_LITERAL);
    } else if (jj_2_24(2)) {
      jj_consume_token(T_TRUE);
    } else if (jj_2_25(2)) {
      jj_consume_token(T_FALSE);
    } else if (jj_2_26(2)) {
      jj_consume_token(T_ID);
    } else if (jj_2_27(2)) {
      jj_consume_token(T_THIS);
    } else if (jj_2_28(2)) {
      jj_consume_token(T_NEW);
      jj_consume_token(T_INT);
      jj_consume_token(T_LCOL);
      Exp();
      jj_consume_token(T_RCOL);
    } else if (jj_2_29(2)) {
      jj_consume_token(T_NEW);
      jj_consume_token(T_ID);
      jj_consume_token(T_LPAR);
      jj_consume_token(T_RPAR);
    } else if (jj_2_30(2)) {
      jj_consume_token(T_OP_UN);
      Exp();
    } else if (jj_2_31(2)) {
      jj_consume_token(T_LPAR);
      Exp();
      jj_consume_token(T_RPAR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ExpR() throws ParseException {
    if (jj_2_36(2)) {
      if (jj_2_32(2)) {
        jj_consume_token(T_OP_BIN);
        Exp();
        ExpR();
      } else if (jj_2_33(2)) {
        jj_consume_token(T_LCOL);
        Exp();
        jj_consume_token(T_RCOL);
        ExpR();
      } else if (jj_2_34(2)) {
        jj_consume_token(T_DOT);
        jj_consume_token(T_LENGTH);
        ExpR();
      } else if (jj_2_35(2)) {
        jj_consume_token(T_DOT);
        jj_consume_token(T_ID);
        jj_consume_token(T_LPAR);
        ExpList();
        jj_consume_token(T_RPAR);
        ExpR();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
  }

  final public void ExpList() throws ParseException {
    Exp();
    label_10:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_10;
      }
      ExpRest();
    }
  }

  final public void ExpRest() throws ParseException {
    jj_consume_token(T_VIRGULA);
    Exp();
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  private boolean jj_2_36(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  private boolean jj_2_37(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  private boolean jj_3_35() {
    if (jj_scan_token(T_DOT)) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_34() {
    if (jj_scan_token(T_DOT)) return true;
    if (jj_scan_token(T_LENGTH)) return true;
    return false;
  }

  private boolean jj_3_36() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) {
    jj_scanpos = xsp;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3_32() {
    if (jj_scan_token(T_OP_BIN)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_33() {
    if (jj_scan_token(T_LCOL)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_31() {
    if (jj_scan_token(T_LPAR)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_30() {
    if (jj_scan_token(T_OP_UN)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_29() {
    if (jj_scan_token(T_NEW)) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_28() {
    if (jj_scan_token(T_NEW)) return true;
    if (jj_scan_token(T_INT)) return true;
    return false;
  }

  private boolean jj_3_27() {
    if (jj_scan_token(T_THIS)) return true;
    return false;
  }

  private boolean jj_3_26() {
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_25() {
    if (jj_scan_token(T_FALSE)) return true;
    return false;
  }

  private boolean jj_3_24() {
    if (jj_scan_token(T_TRUE)) return true;
    return false;
  }

  private boolean jj_3R_19() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) {
    jj_scanpos = xsp;
    if (jj_3_25()) {
    jj_scanpos = xsp;
    if (jj_3_26()) {
    jj_scanpos = xsp;
    if (jj_3_27()) {
    jj_scanpos = xsp;
    if (jj_3_28()) {
    jj_scanpos = xsp;
    if (jj_3_29()) {
    jj_scanpos = xsp;
    if (jj_3_30()) {
    jj_scanpos = xsp;
    if (jj_3_31()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_23() {
    if (jj_scan_token(T_INTEGER_LITERAL)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3R_17() {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(T_ID)) return true;
    if (jj_scan_token(T_LCOL)) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(T_ID)) return true;
    if (jj_scan_token(T_ASSIGN)) return true;
    return false;
  }

  private boolean jj_3_20() {
    if (jj_scan_token(T_SYSTEM)) return true;
    if (jj_scan_token(T_DOT)) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(T_WHILE)) return true;
    if (jj_scan_token(T_LPAR)) return true;
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(T_IF)) return true;
    if (jj_scan_token(T_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_17()) {
    jj_scanpos = xsp;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) {
    jj_scanpos = xsp;
    if (jj_3_20()) {
    jj_scanpos = xsp;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_17() {
    if (jj_scan_token(T_LCHAVE)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_16()) { jj_scanpos = xsp; break; }
    }
    if (jj_scan_token(T_RCHAVE)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(T_INT)) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_13() {
    if (jj_scan_token(T_BOOLEAN)) return true;
    return false;
  }

  private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3_12() {
    if (jj_scan_token(T_INT)) return true;
    if (jj_scan_token(T_LCOL)) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(T_VIRGULA)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_scan_token(T_PUBLIC)) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3R_12() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(T_CLASS)) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) return true;
    }
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(T_CLASS)) return true;
    if (jj_scan_token(T_ID)) return true;
    return false;
  }

  private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_37() {
    if (jj_3R_18()) return true;
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_scan_token(T_VIRGULA)) return true;
    if (jj_3R_17()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public GrammarTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[37];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Grammar(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Grammar(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new GrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Grammar(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new GrammarTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Grammar(GrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(GrammarTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }

